# component-woocommerce

./: .gitignore  Dockerfile  README.md  bitbucket-pipelines.yml  docker-compose.yml  flake8.cfg  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configSchema.json  configuration_description.md
component_config/sample-config/: config.json
local_testing/: data.sql  docker-compose.yml  instructions.txt  products_response.json
src/: column_sanitizer.py  component.py  result.py  woocommerce_cli.py
