[project]
name = "ex-woocommerce"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kbc @ https://bitbucket.org/kds_consulting_team/keboola-python-util-lib/get/0.5.1.zip",
    "mock>=4.0.3",
    "freezegun>=1.2.2",
    "WooCommerce>=2.1.1",
    "backoff>=1.10.0",
    "dateparser>=1.1.1",
    "requests>=2.28.1",
    "flake8>=7.2.0",
]

[tool.ruff]
line-length = 120
